final/y.output
Terminals which are not used

   CONSTANT
   STRING_LITERAL
   SIZEOF
   PTR_OP
   TYPE_NAME
   '?'


Grammar

    0 $accept: Program $end

    1 Program: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | TRUE
    4                   | FALSE
    5                   | CONSTANT_INT
    6                   | CONSTANT_DOUBLE
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 unary_expression: postfix_expression
   17                 | INC_OP unary_expression
   18                 | DEC_OP unary_expression
   19                 | unary_operator unary_expression

   20 unary_operator: '+'
   21               | '-'
   22               | '~'
   23               | '!'

   24 multiplicative_expression: unary_expression
   25                          | multiplicative_expression '*' unary_expression
   26                          | multiplicative_expression '/' unary_expression
   27                          | multiplicative_expression '%' unary_expression

   28 additive_expression: multiplicative_expression
   29                    | additive_expression '+' multiplicative_expression
   30                    | additive_expression '-' multiplicative_expression

   31 shift_expression: additive_expression
   32                 | shift_expression LEFT_OP additive_expression
   33                 | shift_expression RIGHT_OP additive_expression

   34 relational_expression: shift_expression
   35                      | relational_expression '<' shift_expression
   36                      | relational_expression '>' shift_expression
   37                      | relational_expression LE_OP shift_expression
   38                      | relational_expression GE_OP shift_expression

   39 equality_expression: relational_expression
   40                    | equality_expression EQ_OP relational_expression
   41                    | equality_expression NE_OP relational_expression

   42 and_expression: equality_expression
   43               | and_expression '&' equality_expression

   44 exclusive_or_expression: and_expression
   45                        | exclusive_or_expression '^' and_expression

   46 inclusive_or_expression: exclusive_or_expression
   47                        | inclusive_or_expression '|' exclusive_or_expression

   48 logical_and_expression: inclusive_or_expression
   49                       | logical_and_expression AND_OP inclusive_or_expression

   50 logical_or_expression: logical_and_expression
   51                      | logical_or_expression OR_OP logical_and_expression

   52 assignment_expression: logical_or_expression
   53                      | unary_expression assignment_operator assignment_expression

   54 assignment_operator: '='
   55                    | MUL_ASSIGN
   56                    | DIV_ASSIGN
   57                    | MOD_ASSIGN
   58                    | ADD_ASSIGN
   59                    | SUB_ASSIGN
   60                    | LEFT_ASSIGN
   61                    | RIGHT_ASSIGN
   62                    | AND_ASSIGN
   63                    | XOR_ASSIGN
   64                    | OR_ASSIGN

   65 expression: assignment_expression
   66           | expression ',' assignment_expression

   67 declaration: type_specifier ';'
   68            | type_specifier init_declarator_list ';'

   69 init_declarator_list: init_declarator
   70                     | init_declarator_list ',' init_declarator

   71 init_declarator: declarator
   72                | declarator '=' initializer

   73 type_specifier: VOID
   74               | CHAR
   75               | INT
   76               | DOUBLE
   77               | BOOL

   78 declarator: IDENTIFIER
   79           | '(' declarator ')'
   80           | declarator '[' assignment_expression ']'
   81           | declarator '[' '*' ']'
   82           | declarator '[' ']'
   83           | declarator '(' parameter_list ')'
   84           | declarator '(' identifier_list ')'
   85           | declarator '(' ')'

   86 parameter_list: parameter_declaration
   87               | parameter_list ',' parameter_declaration

   88 parameter_declaration: type_specifier declarator
   89                      | type_specifier abstract_declarator
   90                      | type_specifier

   91 identifier_list: IDENTIFIER
   92                | identifier_list ',' IDENTIFIER

   93 abstract_declarator: '(' abstract_declarator ')'
   94                    | '[' ']'
   95                    | '[' assignment_expression ']'
   96                    | abstract_declarator '[' ']'
   97                    | abstract_declarator '[' assignment_expression ']'
   98                    | '[' '*' ']'
   99                    | abstract_declarator '[' '*' ']'
  100                    | '(' ')'
  101                    | '(' parameter_list ')'
  102                    | abstract_declarator '(' ')'
  103                    | abstract_declarator '(' parameter_list ')'

  104 initializer: assignment_expression
  105            | '{' initializer_list '}'
  106            | '{' initializer_list ',' '}'

  107 initializer_list: initializer
  108                 | designation initializer
  109                 | initializer_list ',' initializer
  110                 | initializer_list ',' designation initializer

  111 designation: designator_list '='

  112 designator_list: designator
  113                | designator_list designator

  114 designator: '[' logical_or_expression ']'
  115           | '.' IDENTIFIER

  116 statement: labeled_statement
  117          | compound_statement
  118          | expression_statement
  119          | selection_statement
  120          | iteration_statement
  121          | jump_statement

  122 labeled_statement: IDENTIFIER ':' statement
  123                  | CASE logical_or_expression ':' statement

  124 compound_statement: '{' '}'
  125                   | '{' block_item_list '}'

  126 block_item_list: block_item
  127                | block_item_list block_item

  128 block_item: declaration
  129           | statement

  130 expression_statement: ';'
  131                     | expression ';'

  132 selection_statement: IF '(' expression ')' statement
  133                    | IF '(' expression ')' statement ELSE statement
  134                    | SWITCH '(' expression ')' statement

  135 iteration_statement: WHILE '(' expression ')' statement
  136                    | DO statement WHILE '(' expression ')' ';'
  137                    | FOR '(' expression_statement expression_statement ')' statement
  138                    | FOR '(' expression_statement expression_statement expression ')' statement
  139                    | FOR '(' declaration expression_statement ')' statement
  140                    | FOR '(' declaration expression_statement expression ')' statement

  141 jump_statement: GOTO IDENTIFIER ';'
  142               | CONTINUE ';'
  143               | BREAK ';'
  144               | RETURN ';'
  145               | RETURN expression ';'

  146 translation_unit: external_declaration
  147                 | translation_unit external_declaration

  148 external_declaration: function_definition
  149                     | declaration

  150 function_definition: type_specifier declarator declaration_list compound_statement
  151                    | type_specifier declarator compound_statement

  152 declaration_list: declaration
  153                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 23
'%' (37) 27
'&' (38) 43
'(' (40) 7 10 11 79 83 84 85 93 100 101 102 103 132 133 134 135 136
    137 138 139 140
')' (41) 7 10 11 79 83 84 85 93 100 101 102 103 132 133 134 135 136
    137 138 139 140
'*' (42) 25 81 98 99
'+' (43) 20 29
',' (44) 15 66 70 87 92 106 109 110
'-' (45) 21 30
'.' (46) 115
'/' (47) 26
':' (58) 122 123
';' (59) 67 68 130 131 136 141 142 143 144 145
'<' (60) 35
'=' (61) 54 72 111
'>' (62) 36
'?' (63)
'[' (91) 9 80 81 82 94 95 96 97 98 99 114
']' (93) 9 80 81 82 94 95 96 97 98 99 114
'^' (94) 45
'{' (123) 105 106 124 125
'|' (124) 47
'}' (125) 105 106 124 125
'~' (126) 22
error (256)
IDENTIFIER (258) 2 78 91 92 115 122 141
CONSTANT (259)
STRING_LITERAL (260)
SIZEOF (261)
CONSTANT_INT (262) 5
CONSTANT_DOUBLE (263) 6
PTR_OP (264)
INC_OP (265) 12 17
DEC_OP (266) 13 18
LEFT_OP (267) 32
RIGHT_OP (268) 33
LE_OP (269) 37
GE_OP (270) 38
EQ_OP (271) 40
NE_OP (272) 41
AND_OP (273) 49
OR_OP (274) 51
MUL_ASSIGN (275) 55
DIV_ASSIGN (276) 56
MOD_ASSIGN (277) 57
ADD_ASSIGN (278) 58
SUB_ASSIGN (279) 59
LEFT_ASSIGN (280) 60
RIGHT_ASSIGN (281) 61
AND_ASSIGN (282) 62
XOR_ASSIGN (283) 63
OR_ASSIGN (284) 64
TYPE_NAME (285)
CHAR (286) 74
INT (287) 75
DOUBLE (288) 76
VOID (289) 73
BOOL (290) 77
CASE (291) 123
IF (292) 132 133
ELSE (293) 133
SWITCH (294) 134
WHILE (295) 135 136
DO (296) 136
FOR (297) 137 138 139 140
GOTO (298) 141
CONTINUE (299) 142
BREAK (300) 143
RETURN (301) 144 145
TRUE (302) 3
FALSE (303) 4
LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
Program (75)
    on left: 1, on right: 0
primary_expression (76)
    on left: 2 3 4 5 6 7, on right: 8
postfix_expression (77)
    on left: 8 9 10 11 12 13, on right: 9 10 11 12 13 16
argument_expression_list (78)
    on left: 14 15, on right: 11 15
unary_expression (79)
    on left: 16 17 18 19, on right: 17 18 19 24 25 26 27 53
unary_operator (80)
    on left: 20 21 22 23, on right: 19
multiplicative_expression (81)
    on left: 24 25 26 27, on right: 25 26 27 28 29 30
additive_expression (82)
    on left: 28 29 30, on right: 29 30 31 32 33
shift_expression (83)
    on left: 31 32 33, on right: 32 33 34 35 36 37 38
relational_expression (84)
    on left: 34 35 36 37 38, on right: 35 36 37 38 39 40 41
equality_expression (85)
    on left: 39 40 41, on right: 40 41 42 43
and_expression (86)
    on left: 42 43, on right: 43 44 45
exclusive_or_expression (87)
    on left: 44 45, on right: 45 46 47
inclusive_or_expression (88)
    on left: 46 47, on right: 47 48 49
logical_and_expression (89)
    on left: 48 49, on right: 49 50 51
logical_or_expression (90)
    on left: 50 51, on right: 51 52 114 123
assignment_expression (91)
    on left: 52 53, on right: 14 15 53 65 66 80 95 97 104
assignment_operator (92)
    on left: 54 55 56 57 58 59 60 61 62 63 64, on right: 53
expression (93)
    on left: 65 66, on right: 7 9 66 131 132 133 134 135 136 138 140
    145
declaration (94)
    on left: 67 68, on right: 128 139 140 149 152 153
init_declarator_list (95)
    on left: 69 70, on right: 68 70
init_declarator (96)
    on left: 71 72, on right: 69 70
type_specifier (97)
    on left: 73 74 75 76 77, on right: 67 68 88 89 90 150 151
declarator (98)
    on left: 78 79 80 81 82 83 84 85, on right: 71 72 79 80 81 82 83
    84 85 88 150 151
parameter_list (99)
    on left: 86 87, on right: 83 87 101 103
parameter_declaration (100)
    on left: 88 89 90, on right: 86 87
identifier_list (101)
    on left: 91 92, on right: 84 92
abstract_declarator (102)
    on left: 93 94 95 96 97 98 99 100 101 102 103, on right: 89 93
    96 97 99 102 103
initializer (103)
    on left: 104 105 106, on right: 72 107 108 109 110
initializer_list (104)
    on left: 107 108 109 110, on right: 105 106 109 110
designation (105)
    on left: 111, on right: 108 110
designator_list (106)
    on left: 112 113, on right: 111 113
designator (107)
    on left: 114 115, on right: 112 113
statement (108)
    on left: 116 117 118 119 120 121, on right: 122 123 129 132 133
    134 135 136 137 138 139 140
labeled_statement (109)
    on left: 122 123, on right: 116
compound_statement (110)
    on left: 124 125, on right: 117 150 151
block_item_list (111)
    on left: 126 127, on right: 125 127
block_item (112)
    on left: 128 129, on right: 126 127
expression_statement (113)
    on left: 130 131, on right: 118 137 138 139 140
selection_statement (114)
    on left: 132 133 134, on right: 119
iteration_statement (115)
    on left: 135 136 137 138 139 140, on right: 120
jump_statement (116)
    on left: 141 142 143 144 145, on right: 121
translation_unit (117)
    on left: 146 147, on right: 1 147
external_declaration (118)
    on left: 148 149, on right: 146 147
function_definition (119)
    on left: 150 151, on right: 148
declaration_list (120)
    on left: 152 153, on right: 150 153


state 0

    0 $accept: . Program $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    Program               go to state 6
    declaration           go to state 7
    type_specifier        go to state 8
    translation_unit      go to state 9
    external_declaration  go to state 10
    function_definition   go to state 11


state 1

   74 type_specifier: CHAR .

    $default  reduce using rule 74 (type_specifier)


state 2

   75 type_specifier: INT .

    $default  reduce using rule 75 (type_specifier)


state 3

   76 type_specifier: DOUBLE .

    $default  reduce using rule 76 (type_specifier)


state 4

   73 type_specifier: VOID .

    $default  reduce using rule 73 (type_specifier)


state 5

   77 type_specifier: BOOL .

    $default  reduce using rule 77 (type_specifier)


state 6

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 7

  149 external_declaration: declaration .

    $default  reduce using rule 149 (external_declaration)


state 8

   67 declaration: type_specifier . ';'
   68            | type_specifier . init_declarator_list ';'
  150 function_definition: type_specifier . declarator declaration_list compound_statement
  151                    | type_specifier . declarator compound_statement

    IDENTIFIER  shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15

    init_declarator_list  go to state 16
    init_declarator       go to state 17
    declarator            go to state 18


state 9

    1 Program: translation_unit .
  147 translation_unit: translation_unit . external_declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 1 (Program)

    declaration           go to state 7
    type_specifier        go to state 8
    external_declaration  go to state 19
    function_definition   go to state 11


state 10

  146 translation_unit: external_declaration .

    $default  reduce using rule 146 (translation_unit)


state 11

  148 external_declaration: function_definition .

    $default  reduce using rule 148 (external_declaration)


state 12

    0 $accept: Program $end .

    $default  accept


state 13

   78 declarator: IDENTIFIER .

    $default  reduce using rule 78 (declarator)


state 14

   67 declaration: type_specifier ';' .

    $default  reduce using rule 67 (declaration)


state 15

   79 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 13
    '('         shift, and go to state 15

    declarator  go to state 20


state 16

   68 declaration: type_specifier init_declarator_list . ';'
   70 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 21
    ','  shift, and go to state 22


state 17

   69 init_declarator_list: init_declarator .

    $default  reduce using rule 69 (init_declarator_list)


state 18

   71 init_declarator: declarator .
   72                | declarator . '=' initializer
   80 declarator: declarator . '[' assignment_expression ']'
   81           | declarator . '[' '*' ']'
   82           | declarator . '[' ']'
   83           | declarator . '(' parameter_list ')'
   84           | declarator . '(' identifier_list ')'
   85           | declarator . '(' ')'
  150 function_definition: type_specifier declarator . declaration_list compound_statement
  151                    | type_specifier declarator . compound_statement

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    '='     shift, and go to state 23
    '['     shift, and go to state 24
    '{'     shift, and go to state 25
    '('     shift, and go to state 26

    $default  reduce using rule 71 (init_declarator)

    declaration         go to state 27
    type_specifier      go to state 28
    compound_statement  go to state 29
    declaration_list    go to state 30


state 19

  147 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 147 (translation_unit)


state 20

   79 declarator: '(' declarator . ')'
   80           | declarator . '[' assignment_expression ']'
   81           | declarator . '[' '*' ']'
   82           | declarator . '[' ']'
   83           | declarator . '(' parameter_list ')'
   84           | declarator . '(' identifier_list ')'
   85           | declarator . '(' ')'

    '['  shift, and go to state 24
    '('  shift, and go to state 26
    ')'  shift, and go to state 31


state 21

   68 declaration: type_specifier init_declarator_list ';' .

    $default  reduce using rule 68 (declaration)


state 22

   70 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 13
    '('         shift, and go to state 15

    init_declarator  go to state 32
    declarator       go to state 33


state 23

   72 init_declarator: declarator '=' . initializer

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 45
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 60
    assignment_expression      go to state 61
    initializer                go to state 62


state 24

   80 declarator: declarator '[' . assignment_expression ']'
   81           | declarator '[' . '*' ']'
   82           | declarator '[' . ']'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    ']'              shift, and go to state 63
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '*'              shift, and go to state 64
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 60
    assignment_expression      go to state 65


state 25

  124 compound_statement: '{' . '}'
  125                   | '{' . block_item_list '}'

    IDENTIFIER       shift, and go to state 66
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    CHAR             shift, and go to state 1
    INT              shift, and go to state 2
    DOUBLE           shift, and go to state 3
    VOID             shift, and go to state 4
    BOOL             shift, and go to state 5
    CASE             shift, and go to state 67
    IF               shift, and go to state 68
    SWITCH           shift, and go to state 69
    WHILE            shift, and go to state 70
    DO               shift, and go to state 71
    FOR              shift, and go to state 72
    GOTO             shift, and go to state 73
    CONTINUE         shift, and go to state 74
    BREAK            shift, and go to state 75
    RETURN           shift, and go to state 76
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    ';'              shift, and go to state 77
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 25
    '}'              shift, and go to state 78
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 60
    assignment_expression      go to state 79
    expression                 go to state 80
    declaration                go to state 81
    type_specifier             go to state 28
    statement                  go to state 82
    labeled_statement          go to state 83
    compound_statement         go to state 84
    block_item_list            go to state 85
    block_item                 go to state 86
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    jump_statement             go to state 90


state 26

   83 declarator: declarator '(' . parameter_list ')'
   84           | declarator '(' . identifier_list ')'
   85           | declarator '(' . ')'

    IDENTIFIER  shift, and go to state 91
    CHAR        shift, and go to state 1
    INT         shift, and go to state 2
    DOUBLE      shift, and go to state 3
    VOID        shift, and go to state 4
    BOOL        shift, and go to state 5
    ')'         shift, and go to state 92

    type_specifier         go to state 93
    parameter_list         go to state 94
    parameter_declaration  go to state 95
    identifier_list        go to state 96


state 27

  152 declaration_list: declaration .

    $default  reduce using rule 152 (declaration_list)


state 28

   67 declaration: type_specifier . ';'
   68            | type_specifier . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15

    init_declarator_list  go to state 16
    init_declarator       go to state 17
    declarator            go to state 33


state 29

  151 function_definition: type_specifier declarator compound_statement .

    $default  reduce using rule 151 (function_definition)


state 30

  150 function_definition: type_specifier declarator declaration_list . compound_statement
  153 declaration_list: declaration_list . declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 25

    declaration         go to state 97
    type_specifier      go to state 28
    compound_statement  go to state 98


state 31

   79 declarator: '(' declarator ')' .

    $default  reduce using rule 79 (declarator)


state 32

   70 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 70 (init_declarator_list)


state 33

   71 init_declarator: declarator .
   72                | declarator . '=' initializer
   80 declarator: declarator . '[' assignment_expression ']'
   81           | declarator . '[' '*' ']'
   82           | declarator . '[' ']'
   83           | declarator . '(' parameter_list ')'
   84           | declarator . '(' identifier_list ')'
   85           | declarator . '(' ')'

    '='  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 26

    $default  reduce using rule 71 (init_declarator)


state 34

    2 primary_expression: IDENTIFIER .

    $default  reduce using rule 2 (primary_expression)


state 35

    5 primary_expression: CONSTANT_INT .

    $default  reduce using rule 5 (primary_expression)


state 36

    6 primary_expression: CONSTANT_DOUBLE .

    $default  reduce using rule 6 (primary_expression)


state 37

   17 unary_expression: INC_OP . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46

    primary_expression  go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 99
    unary_operator      go to state 50


state 38

   18 unary_expression: DEC_OP . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46

    primary_expression  go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 100
    unary_operator      go to state 50


state 39

    3 primary_expression: TRUE .

    $default  reduce using rule 3 (primary_expression)


state 40

    4 primary_expression: FALSE .

    $default  reduce using rule 4 (primary_expression)


state 41

   23 unary_operator: '!' .

    $default  reduce using rule 23 (unary_operator)


state 42

   22 unary_operator: '~' .

    $default  reduce using rule 22 (unary_operator)


state 43

   21 unary_operator: '-' .

    $default  reduce using rule 21 (unary_operator)


state 44

   20 unary_operator: '+' .

    $default  reduce using rule 20 (unary_operator)


state 45

  105 initializer: '{' . initializer_list '}'
  106            | '{' . initializer_list ',' '}'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '['              shift, and go to state 101
    '.'              shift, and go to state 102
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '{'              shift, and go to state 45
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 60
    assignment_expression      go to state 61
    initializer                go to state 103
    initializer_list           go to state 104
    designation                go to state 105
    designator_list            go to state 106
    designator                 go to state 107


state 46

    7 primary_expression: '(' . expression ')'

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 49
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 60
    assignment_expression      go to state 79
    expression                 go to state 108


state 47

    8 postfix_expression: primary_expression .

    $default  reduce using rule 8 (postfix_expression)


state 48

    9 postfix_expression: postfix_expression . '[' expression ']'
   10                   | postfix_expression . '(' ')'
   11                   | postfix_expression . '(' argument_expression_list ')'
   12                   | postfix_expression . INC_OP
   13                   | postfix_expression . DEC_OP
   16 unary_expression: postfix_expression .

    INC_OP  shift, and go to state 109
    DEC_OP  shift, and go to state 110
    '['     shift, and go to state 111
    '('     shift, and go to state 112

    $default  reduce using rule 16 (unary_expression)


state 49

   24 multiplicative_expression: unary_expression .
   53 assignment_expression: unary_expression . assignment_operator assignment_expression

    MUL_ASSIGN    shift, and go to state 113
    DIV_ASSIGN    shift, and go to state 114
    MOD_ASSIGN    shift, and go to state 115
    ADD_ASSIGN    shift, and go to state 116
    SUB_ASSIGN    shift, and go to state 117
    LEFT_ASSIGN   shift, and go to state 118
    RIGHT_ASSIGN  shift, and go to state 119
    AND_ASSIGN    shift, and go to state 120
    XOR_ASSIGN    shift, and go to state 121
    OR_ASSIGN     shift, and go to state 122
    '='           shift, and go to state 123

    $default  reduce using rule 24 (multiplicative_expression)

    assignment_operator  go to state 124


state 50

   19 unary_expression: unary_operator . unary_expression

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46

    primary_expression  go to state 47
    postfix_expression  go to state 48
    unary_expression    go to state 125
    unary_operator      go to state 50


state 51

   25 multiplicative_expression: multiplicative_expression . '*' unary_expression
   26                          | multiplicative_expression . '/' unary_expression
   27                          | multiplicative_expression . '%' unary_expression
   28 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 126
    '/'  shift, and go to state 127
    '%'  shift, and go to state 128

    $default  reduce using rule 28 (additive_expression)


state 52

   29 additive_expression: additive_expression . '+' multiplicative_expression
   30                    | additive_expression . '-' multiplicative_expression
   31 shift_expression: additive_expression .

    '-'  shift, and go to state 129
    '+'  shift, and go to state 130

    $default  reduce using rule 31 (shift_expression)


state 53

   32 shift_expression: shift_expression . LEFT_OP additive_expression
   33                 | shift_expression . RIGHT_OP additive_expression
   34 relational_expression: shift_expression .

    LEFT_OP   shift, and go to state 131
    RIGHT_OP  shift, and go to state 132

    $default  reduce using rule 34 (relational_expression)


state 54

   35 relational_expression: relational_expression . '<' shift_expression
   36                      | relational_expression . '>' shift_expression
   37                      | relational_expression . LE_OP shift_expression
   38                      | relational_expression . GE_OP shift_expression
   39 equality_expression: relational_expression .

    LE_OP  shift, and go to state 133
    GE_OP  shift, and go to state 134
    '<'    shift, and go to state 135
    '>'    shift, and go to state 136

    $default  reduce using rule 39 (equality_expression)


state 55

   40 equality_expression: equality_expression . EQ_OP relational_expression
   41                    | equality_expression . NE_OP relational_expression
   42 and_expression: equality_expression .

    EQ_OP  shift, and go to state 137
    NE_OP  shift, and go to state 138

    $default  reduce using rule 42 (and_expression)


state 56

   43 and_expression: and_expression . '&' equality_expression
   44 exclusive_or_expression: and_expression .

    '&'  shift, and go to state 139

    $default  reduce using rule 44 (exclusive_or_expression)


state 57

   45 exclusive_or_expression: exclusive_or_expression . '^' and_expression
   46 inclusive_or_expression: exclusive_or_expression .

    '^'  shift, and go to state 140

    $default  reduce using rule 46 (inclusive_or_expression)


state 58

   47 inclusive_or_expression: inclusive_or_expression . '|' exclusive_or_expression
   48 logical_and_expression: inclusive_or_expression .

    '|'  shift, and go to state 141

    $default  reduce using rule 48 (logical_and_expression)


state 59

   49 logical_and_expression: logical_and_expression . AND_OP inclusive_or_expression
   50 logical_or_expression: logical_and_expression .

    AND_OP  shift, and go to state 142

    $default  reduce using rule 50 (logical_or_expression)


state 60

   51 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   52 assignment_expression: logical_or_expression .

    OR_OP  shift, and go to state 143

    $default  reduce using rule 52 (assignment_expression)


state 61

  104 initializer: assignment_expression .

    $default  reduce using rule 104 (initializer)


state 62

   72 init_declarator: declarator '=' initializer .

    $default  reduce using rule 72 (init_declarator)


state 63

   82 declarator: declarator '[' ']' .

    $default  reduce using rule 82 (declarator)


state 64

   81 declarator: declarator '[' '*' . ']'

    ']'  shift, and go to state 144


state 65

   80 declarator: declarator '[' assignment_expression . ']'

    ']'  shift, and go to state 145


state 66

    2 primary_expression: IDENTIFIER .
  122 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 146

    $default  reduce using rule 2 (primary_expression)


state 67

  123 labeled_statement: CASE . logical_or_expression ':' statement

    IDENTIFIER       shift, and go to state 34
    CONSTANT_INT     shift, and go to state 35
    CONSTANT_DOUBLE  shift, and go to state 36
    INC_OP           shift, and go to state 37
    DEC_OP           shift, and go to state 38
    TRUE             shift, and go to state 39
    FALSE            shift, and go to state 40
    '!'              shift, and go to state 41
    '~'              shift, and go to state 42
    '-'              shift, and go to state 43
    '+'              shift, and go to state 44
    '('              shift, and go to state 46

    primary_expression         go to state 47
    postfix_expression         go to state 48
    unary_expression           go to state 147
    unary_operator             go to state 50
    multiplicative_expression  go to state 51
    additive_expression        go to state 52
    shift_expression           go to state 53
    relational_expression      go to state 54
    equality_expression        go to state 55
    and_expression             go to state 56
    exclusive_or_expression    go to state 57
    inclusive_or_expression    go to state 58
    logical_and_expression     go to state 59
    logical_or_expression      go to state 148


state 68

  132 selection_statement: IF . '(' expression ')' statement
  133                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 149


state 69

  134 selection_statement: SWITCH . '(' expression ')' statement

    '('  shift, and go to state 150


state 70

  135 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 151


state 71

  136 iteration_statement: DO . statement WHILE '(' expression ')' ';'
